Docs: save & add pictures to ejs.

--- a/shopping_how/views/index.ejs
+++ b/shopping_how/views/index.ejs
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <span><img class="sh-logo"></span>
+      <span><img class="sh-logo" src='/images/logo_sh.png' alt="shoppinghow logo"></span>
       <div class="searchbox"><!--여기에 돋보기 이미지 들어감--></div>
       <nav class="nav-container">
         <ul>
@@ -32,10 +32,10 @@
     <section class="main">
       <div class="upper-half">
         <div class="upper-half__left">
-          <img>
+          <img src="/images/main-1.png" alt="main image1">
         </div>
         <div class="upper-half__right"><!--여기가 캐로셀-->
-          <img>
+          <img src="/images/main-2.png" alt="main image2">
         </div>
       </div>
       <div class="lower-half">
