Add : CSS 파일 SASS 로 컴파일 설정

--- a/shopping/views/main.ejs
+++ b/shopping/views/main.ejs
@@ -14,7 +14,7 @@
                  <button></button>
              </div>
         </div>
-        <div class = "head_banner">
+        <div class = "nav">
             <button class = "category"></button>
             <a class = "hotDeal"></a>
             <a class = "bestRank"></a>
