--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,7 @@
                             <img src="/images/logo_shw.png" />
                         </a>
                     </div>
+
                     <div class="search">
                         <input
                             type="text"
@@ -29,7 +30,7 @@
                         <button type="button">                            
                             <span class="i-search"></span>         
                         </button>
-                    </div>                    
+                    </div>
                 </div>
 
                 <div class="menu">
@@ -62,12 +63,15 @@
                             <li>
                                 <a href="#">
                                     <span class="i-user"></span>
-                                    로그인
+                                    <span>로그인</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#">최근본 상품</a>
-                                <span>▼ ICON</span>
+                                <a href="#">
+                                    <span class="i-recent"></span>
+                                    <span>최근본 상품</span>
+                                </a>
+                               
                             </li>
                         </ul>
 
