--- a/public/src/css/partials/main.scss
+++ b/public/src/css/partials/main.scss
@@ -1,14 +1,67 @@
+//아이템 박스
+@mixin itemBox {
+  background-color: #fff;
+  height: 330px;
+  padding: 21px 27px;
+  border-right: 1px solid #f1f1f1;
+  float: left;
+  img {
+    width: 200px;
+    height: 200px;
+  }
+  .item-title {
+    font-size: 0.8rem;
+    font-weight: 600;
+    margin: 10px 0 7px;
+  }
+  .item-info {
+    font-size: 0.8rem;
+    opacity: 0.7;
+    line-height: 15px;
+    margin-bottom: 9px;
+  }
+  .item-theme {
+    width: 31px;
+    font-size: 0.8rem;
+    color: #f0a969;
+    border: 1px solid #f0a969;
+    border-radius: 2px;
+    padding: 2px 1px;
+    text-align: center;
+  }
+}
+
+//메인
 main {
+  width: 100%;
   min-height: 770px;
   background-color: #f3f3f3;
   padding: 0 300px;
   padding-top: 20px;
+  overflow: hidden;
 }
+
 .banner {
   border: 1px solid #e4e4e4;
   background-color: #fff;
   .banner__column {
     display: flex;
+  }
+  .banner-event {
+    flex: 2;
+  }
+  .banner-list {
+    box-sizing: border-box;
+    border-left: 1px solid #e4e4e4;
+    flex: 3;
+  }
+  ul {
+    border-top: 1px solid #e4e4e4;
+    display: flex;
+    li {
+      flex: 1;
+      @include itemBox();
+    }
   }
 }
 
@@ -20,8 +73,13 @@ main {
     font-weight: 400;
     margin: 10px 0;
   }
-}
-.hot-theme-list {
-  border: 1px solid #e4e4e4;
-  background-color: #fff;
+  ul {
+    display: flex;
+    border: 1px solid #e4e4e4;
+    background-color: #fff;
+    li {
+      flex: 1;
+      @include itemBox();
+    }
+  }
 }
