--- a/shopping/views/main.ejs
+++ b/shopping/views/main.ejs
@@ -11,7 +11,7 @@
              <img class = "main_icon" src = "/images/logo_shw.png">
              <div class = "search_box">
                  <input class = "search">
-                 <button></button>
+                 <input type = "button" class = "search-btn">
              </div>
         </div>
         <div class = "nav">
