--- a/shopping/public/stylesheets/main.css
+++ b/shopping/public/stylesheets/main.css
@@ -1,6 +1,47 @@
 /* init */
-body {
-  color: #00c;
+.main_icon {
+  width: 119px;
+  height: 51px;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 43px;
+}
+.header .head_top {
+  width: 843px;
+  height: 55px;
+  display: flex;
+  justify-content: space-around;
+}
+.header .nav {
+  width: 100%;
+  height: 55px;
+}
+
+.search_box {
+  border: 1px solid #333;
+  border-radius: 12px;
+  width: 670px;
+  height: 54px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.search_box .search {
+  width: 578px;
+  height: 22px;
+  margin-left: 30px;
+  border: transparent;
+}
+.search_box .search-btn {
+  background: url(https://shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/nav/ico_gnb_shw.png) no-repeat;
+  background-size: 130px 90px;
+  border: transparent;
+  width: 52px;
+  height: 52px;
 }
 
 /*# sourceMappingURL=main.css.map */
