페이지 header HTML 구조 작성

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,73 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/style.css" />
-    <title>Document</title>
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.15.2/js/all.js"
+    ></script>
+    <title>FE-3-shoppingHow</title>
   </head>
   <body>
+    <header>
+      <nav class="nav">
+        <div class="nav-item logo"><img src="/img/logo.png" alt="logo" /></div>
+        <div class="nav-item nav-search-wrap">
+          <form action="" class="nav-search-bar">
+            <input type="text" name="search" class="search-bar" />
+            <i class="fas fa-search"></i>
+          </form>
+          <ol class="nav-search-rank">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ol>
+        </div>
+      </nav>
+    </header>
+    <section class="under-nav-wrapper">
+      <div class="under-nav-container">
+        <div class="under-nav-catergory">
+          <div>
+            <i class="fas fa-bars"></i>
+          </div>
+          <span>카테고리</span>
+        </div>
+        <div class="under-nav-list-item">
+          <ul class="under-nav-list">
+            <li>핫딜</li>
+            <li>베스트100</li>
+            <li>할인특가</li>
+            <li>기획전</li>
+          </ul>
+        </div>
+        <div class="under-nav-list-tag">
+          <ul class="under-nav-tag">
+            <li>#건강식품</li>
+            <li>#제철음식</li>
+            <li>#블루투스이어폰</li>
+            <li>#커플체어</li>
+            <li>#노트북</li>
+          </ul>
+        </div>
+        <div class="under-nav-right">
+          <div class="under-nav-profile">
+            <i class="far fa-user"></i>
+            <span>로그인</span>
+          </div>
+          <div class="under-nav-product">
+            <i class="far fa-clone"></i>
+            <span>장바구니</span>
+          </div>
+        </div>
+      </div>
+    </section>
     example ejs
     <footer><% include ./parts/footer %></footer>
   </body>
