--- a/shopping/public/stylesheets/style.scss
+++ b/shopping/public/stylesheets/style.scss
@@ -1,14 +1,11 @@
-$font_size: 14px;
+@import "./vars.scss";
+@import "./header.scss";
+@import "./main.scss";
 
 body,
 ul,
+li,
 button,
 a {
   all: unset;
-}
-
-body {
-  font: {
-    size: $font_size;
-  }
 }
