--- a/shopping/public/stylesheets/main.scss
+++ b/shopping/public/stylesheets/main.scss
@@ -1,14 +1,30 @@
-$font_size: 24px;
+@import "./vars.scss";
+@import "./main/articleTop.scss";
 
-body,
-ul,
-button,
-a {
-  all: unset;
+main {
+  padding: 0 $padding-for-left-right;
+  background-color: map-get($color-palette, default-border-color);
+  font-size: map-get($font-size, content);
 }
 
-body {
-  font: {
-    size: $font_size;
+.dividing-space {
+  height: 40px;
+}
+
+.none {
+  display: none;
+}
+
+.main__article {
+  width: 100%;
+  background-color: #fff;
+
+  .article__hotDeal {
+  }
+
+  .article__keyword {
+  }
+
+  .article__how {
   }
 }
