--- a/public/src/css/partials/main.scss
+++ b/public/src/css/partials/main.scss
@@ -38,29 +38,97 @@ main {
   background-color: #f3f3f3;
   padding: 0 300px;
   padding-top: 20px;
-  overflow: hidden;
 }
 
+//이벤트 배너
 .banner {
   border: 1px solid #e4e4e4;
   background-color: #fff;
-  .banner__column {
+  .banner__main-event {
+    height: 340px;
     display: flex;
   }
   .banner-event {
     flex: 2;
-  }
-  .banner-list {
-    box-sizing: border-box;
-    border-left: 1px solid #e4e4e4;
-    flex: 3;
+    height: 100%;
+    text-align: center;
+    .banner-event-item {
+      height: 100%;
+    }
   }
   ul {
-    border-top: 1px solid #e4e4e4;
     display: flex;
+    border-top: 1px solid #f1f1f1;
+    background-color: #fff;
+    overflow: hidden;
     li {
+      overflow: hidden;
       flex: 1;
       @include itemBox();
+    }
+  }
+}
+
+//슬라이드
+
+.slide {
+  position: relative;
+  flex: 3;
+  height: 100%;
+  text-align: center;
+  border-left: 1px solid #f1f1f1;
+  margin-right: 2px;
+  .slide-item {
+    height: 100%;
+  }
+  .slide-event {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    .slide-event__btn {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+      padding: 0 60px;
+      align-items: center;
+      & > div {
+        padding: 15px 12px;
+        font-size: 3rem;
+        cursor: pointer;
+        color: rgba(0, 0, 0, 0.3);
+        border: 2px solid rgba(0, 0, 0, 0);
+      }
+      & > div:hover {
+        color: rgba(0, 0, 0, 0.6);
+      }
+      & > div:focus {
+        border: 2px solid #000;
+        border-radius: 5px;
+      }
+    }
+    .slide-event__paging {
+      width: 100%;
+      position: absolute;
+      bottom: 40px;
+      display: flex;
+      justify-content: center;
+      .btn-paging {
+        width: 17px;
+        height: 6px;
+        margin-left: 5px;
+        float: left;
+        background-color: #000;
+        opacity: 0.5;
+      }
+      .paging-first {
+        margin: 0;
+      }
+      .btn-paging:hover {
+        opacity: 1;
+      }
     }
   }
 }
@@ -77,7 +145,9 @@ main {
     display: flex;
     border: 1px solid #e4e4e4;
     background-color: #fff;
+    overflow: hidden;
     li {
+      overflow: hidden;
       flex: 1;
       @include itemBox();
     }
